--- a/templates/index.html
+++ b/templates/index.html
@@ -19,14 +19,90 @@
 	</head>
 
 	<body>
-		<div class="mx-auto mt-5">
+        <header class="mb-5">
+            <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+              <a class="navbar-brand" href="#">Breast Cancer Risk Prediction</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Kevin Akbar Adhiguna</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">140810170055</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Kelas A</a>
+                  </li>
+                </ul>
+                <form class="form-inline mt-2 mt-md-0">
+                  <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+              </div>
+            </nav>
+        </header>
+
+        <main role="main">
             <center>
-                <h3>Breast Cancer Risk Prediction</h3> <br>
-                <h4>Nama  : Kevin Akbar Adhiguna</h4>
-                <h4>NPM   : 140810170055</h4>
-                <h4>Kelas : A</h4>
+                <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img 
+                            src="https://www.nationalbreastcancer.org/wp-content/uploads/BC-Stats-v04_1-in-8-women-Landscape-1024x575.png" 
+                            class="d-block w-60" 
+                            alt="breast-cancer-prone" 
+                            height="575"
+                        >
+                        <!-- <div class="carousel-caption d-none d-md-block">
+                          <h5>Women are more breast cancer prone than Men</h5>
+                          <p>The American Cancer Society estimates that in 2017 about 252,710 new cases of invasive breast cancer will be diagnosed in women.</p>
+                        </div> -->
+                      </div>
+                      <div class="carousel-item">
+                        <img 
+                            src="https://cdn.shopify.com/s/files/1/0079/7704/1977/files/baby_hooded_bath_towel_large.png?v=1570775480" 
+                            class="d-block w-60" 
+                            alt="Myth and Facts about Breast Cancer"
+                            height="575"
+                        >
+                        <!-- <div class="carousel-caption d-none d-md-block">
+                          <h5>Myths and Facts - Breast Cancer</h5>
+                          <p class="text-body">Here are some notable myths and facts about Breast Cancer</p>
+                        </div> -->
+                      </div>
+                      <div class="carousel-item">
+                        <img 
+                            src="https://unitedcsf.org/wp-content/uploads/2018/10/breast-cancer-family-history.png" 
+                            class="d-block w-60" 
+                            alt="WHO - cancer"
+                            height="575"
+                        >
+                        <!-- <div class="carousel-caption d-none d-md-block">
+                          <h5>Third slide label</h5>
+                          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                        </div> -->
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </center>
-        </div>
+          </main>
+
 		<div>
 			<article>
 				<h1 class="mt-3">Prediksi Risiko Kanker Payudara</h1>
@@ -162,8 +238,15 @@
 					</form>
 				</div>
 			</article>
-		</div>
-		<script src="{{ url_for('static', filename='assets/js/jquery.min.js') }}"></script>
+        </div>
+
+        <!-- FOOTER -->
+        <footer class="container">
+            <h5 class="float-right"><a href="#">Back to top</a></h5>
+            <h4>&copy;2020 Kevin Akbar Adhiguna - Machine Learning Mid Assessment.</h4>
+        </footer>
+        
+        <script src="{{ url_for('static', filename='assets/js/jquery.min.js') }}"></script>
 		<script src="{{ url_for('static', filename='assets/js/EQCSS.js') }}"></script>
 		<script src="{{ url_for('static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
 	</body>
